# RoboLauncher

./: .gitignore  .prettierrc  README.md  bun.lockb  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  tailwind.config.ts  tsconfig.json  vite.config.js
.svelte-kit/: ambient.d.ts
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: LaunchPanel.svelte  OptionInfoModal.svelte  actions.js  config.ts  dispatcher.ts  installchecker.js  installer.ts  installvalidator.ts  runner.ts  stores.ts  tauriFix.ts
src/routes/: +layout.svelte  +page.svelte  +page.ts
src/routes/disclaimer/: +page.svelte
src/routes/settings/: +page.svelte  +page.ts
