[package]
name = "RoboLauncher"
version = "0.0.1"
description = "An unofficial linux launcher for Robocraft 2"
authors = ["TurtleIdiot"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
tar = "0.4.38"
lzma-rs = "0.3.0"
flate2 = "1.0.25"
sha1 = "0.10.1"
base64 = "0.21.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
